--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,12 +1,15 @@
 version: "3.3"
 services:
   nginx:
-    image: nginx:1.14   
+    image: nginx
     restart: always
     ports:
       - "8080:80"
     volumes:
     - data:/var/log
+  redis:
+    image: redis
+  
 
 volumes:
   data:
