--- a/src/deployment.yaml
+++ b/src/deployment.yaml
@@ -1,30 +1,25 @@
-kind: pod
-spec:
-  replicas:
-  template:
-    spec:
-      volumes:
-      -
-        name: data
-      containers:
-      -
-        image: nginx
-        volumeMounts:
-        -
-          mountPath: asd
-          name: data
-        name: ''
-        ports:
-        -
-          containerPort: 80
-    metadata:
-      labels:
-        app: ''
-  selector:
-    matchLabels:
-      app: ''
 apiVersion: apps/v1
+kind: Deployment
 metadata:
   labels:
-    app: ''
-  name: -pod
+    app: BesiktasJK
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: BesiktasJK
+  template:
+    metadata:
+      labels:
+        app: BesiktasJK
+    spec:
+      containers:
+      - image: nginx
+        name: BesiktasJK
+        ports:
+        - containerPort: 80
+        volumeMounts:
+        - mountPath: None
+          name: data
+      volumes:
+      - name: data
