README.md updated

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
-kind: Pod
+kind: Deployment
 metadata:
   labels:
-    app: asd
+    app: composetok8s
 spec:
   replicas: null
   selector:
     matchLabels:
-      app: asd
+      app: composetok8s
   template:
     metadata:
       labels:
-        app: asd
+        app: composetok8s
     spec:
       containers:
       - image: nginx
-        name: asd
+        name: composetok8s
         ports:
         - containerPort: 80
         volumeMounts:
